--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-node@v2.5.2
         with:
           node-version: 18
+          cache-dependency-path: "yarn.lock"
 
       - name: Install dependencies
         id: install-dependencies
