--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@componly/cli": "^2.0.1",
+    "@componly/cli": "2.0.1",
     "@storybook/addon-essentials": "7.0.26",
     "@storybook/addon-interactions": "7.0.26",
     "@storybook/addon-links": "7.0.26",
@@ -40,5 +40,9 @@
     "@storybook/testing-library": "0.0.14-next.2",
     "eslint-plugin-storybook": "^0.6.12",
     "storybook": "7.0.26"
+  },
+  "resolutions": {
+    "@componly/core": "2.0.1",
+    "@componly/schemas": "2.0.1"
   }
 }
