--- a/.github/workflows/monorepo.yml
+++ b/.github/workflows/monorepo.yml
@@ -51,7 +51,7 @@ jobs:
             const axios = require("axios");
 
             const instance = axios.create({
-              baseURL: "https://6fe5-105-235-130-182.ngrok-free.app",
+              baseURL: "'https://6fe5-105-235-130-182.ngrok-free.app",
               headers: {
                 "Content-Type": "application/json",
               },
